feat: integrate production-ready Raft consensus for distributed replication
- Implemented complete Raft consensus algorithm with leader election, log replication, and fault tolerance

- Added RaftAtlas wrapper to seamlessly integrate Raft with Atlas KV store

- Single-node cluster optimization for immediate leader election

- Added Raft configuration to default.yaml with peer management

- Updated atlasd to support both standalone and cluster modes via CLI flags

- Created cluster setup scripts for Windows and Linux/macOS

- Comprehensive documentation: RAFT_INTEGRATION.md and CLUSTER_SETUP.md

- All Raft tests passing (election, replication, failover, snapshot)

- Production-ready: handles split-brain, persistence, graceful shutdown

- Public API for state/term/leader inspection

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -4,6 +4,23 @@ atlas:
   snapshot_interval_cmds: 10000
   snapshot_interval_time: "5m"
 
+  # Raft consensus configuration (for multi-node clusters)
+  raft:
+    enabled: false                    # Enable Raft replication
+    node_id: "node-1"                # Unique node identifier
+    bind_addr: "127.0.0.1:7000"      # Raft RPC listen address
+    data_dir: "/var/lib/helios/raft" # Raft data directory (logs, snapshots)
+    heartbeat_timeout: "100ms"       # Leader heartbeat interval
+    election_timeout: "500ms"        # Follower election timeout base
+    snapshot_threshold: 10000        # Commands before triggering snapshot
+
+    # Peer nodes in the cluster (excluding this node)
+    peers:
+      # - id: "node-2"
+      #   address: "127.0.0.1:7001"
+      # - id: "node-3"
+      #   address: "127.0.0.1:7002"
+
 gateway:
   listen: ":8443"
   tls_enabled: false
